Initial mobile  commit

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                             <a href="#" id="bookDemo">Book Demo</a>
                         </div>
                     </div>
-                    <div class="col-1"></div>
+                    <div class="col-2"></div>
+
                         <div class="col-md-4 img-contain">
                         <div>
                             <img class="img" src="images/Group 1000001043.svg" alt="" />
@@ -86,33 +87,39 @@
             <div class="about-content">
                 <div class="row">
                     <div class="col-1"></div>
-                    <div class="col-2 text-center">
+                    <div class="col text-center">
                         <img src="images/Group 1000001095.svg" alt="" />
+                        <div class="w-100"></div> <br>
+                        <div class="text-center about-text">Secure Data Protection</div><br>
+
                     </div>
-                    <div class="col-2 text-center">
+                    <div class="col text-center">
                         <img src="images/Group 1000001143.png" style="height: 63px; width: 62px" alt="" />
+                        <div class="w-100"></div> <br>
+                        <div class="text-center about-text">Easy and simple to use</div><br>
+
                     </div>
-                    <div class="col-2 text-center">
+                    <div class="col text-center">
                         <img src="images/Group 1000001097.svg" alt="" />
+                        <div class="w-100"></div> <br>
+                        <div class="text-center about-text">Easy migration from any software</div><br>
+
                     </div>
-                    <div class="col-2 text-center">
+                    <div class="col text-center">
                         <img src="images/Group 1000001098.svg" alt="" />
+                        <div class="w-100"></div> <br>
+                        <div class="text-center about-text">Priority Support</div><br>
+
                     </div>
-                    <div class="col-2 text-center">
+                    <div class="col text-center">
                         <img src="images/Group 1000001099.svg" alt="" />
+                        <div class="w-100"></div> <br>
+                        <div class="text-center about-text">In-Store, App & Website</div><br>
                     </div>
                     <div class="col-1"></div>
                 </div>
                 <br />
-                <div class="row about-text">
-                    <div class="col-1"></div>
-                    <div class="col-2 text-center">Secure Data Protection</div>
-                    <div class="col-2 text-center">Easy and simple to use</div>
-                    <div class="col-2 text-center">Easy migration from any software</div>
-                    <div class="col-2 text-center">Priority Support</div>
-                    <div class="col-2 text-center">In-Store, App & Website</div>
-                    <div class="col-1"></div>
-                </div>
+                
             </div>
         </div>
     </section>
