about us 2nd initial commit

--- a/index.html
+++ b/index.html
@@ -463,19 +463,19 @@
                                 <a href="#aboutUS">About Us</a>
                             </div>
                             <div class="col">
-                                <a href="#">Privacy Policy</a>
+                                <a href="https://jewellers.live/?page_id=216">Privacy Policy</a>
                             </div>
                         </div>
                         <br />
                         <div class="row">
                             <div class="col">
-                                <a href="#">FAQ</a>
+                                <a href="https://jewellers.live/?page_id=275">FAQ</a>
                             </div>
                             <div class="col">
                                 <a href="#">Refund & Cancellation Policy</a>
                             </div>
                         </div>
-                        <br />
+                        
                         <div class="row">
                             <div class="col">
                                 <a href="#">Terms of Use</a>
