--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                         <div class="card mt-5 p-3 bottom_class">
                             <div class="row" style="padding: 2%">
                                 <div class="col-md-12 text-center">
-                                    <h2 class="faq-heading title">Have any questions?</h2>
+                                    <h2 class="faq-heading title">hHave any questions?</h2>
                                 </div>
                                 <div class="col-md-12 mt-5">
                                     <div class="card p-3">
