--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
                             </div>
                             <div class="card2">
                                 <div class="box">
-                                    <img src="images/vishal_logo.jpg" alt="" />
+                                    <img src="images/vishal_logo 2.svg" alt="" />
                                 </div>
                             </div>
                             <div class="card3">
                                 <div class="box">
-                                    <img src="images/sjr_logo.jpg" alt="" />
+                                    <img src="images/IMG_20230304_102605_447 1.svg" alt="" />
                                 </div>
                             </div>
                             <div class="card4">
@@ -318,7 +318,7 @@
                         </div>
                         <div class="col-8"></div>
                     </div>
-                    <p>
+                    <p class="text-left">
                         We have been running Jewellery buying plans for over a decade now and have more than 2000
                         customers doing it yearly. In recent years, at least 30-40% of customers started sending
                         their installments on Gpay or phonepay which was convenient for them. However, it became a
@@ -341,11 +341,11 @@
                 <div class="card p-3 text-left">
                     <div class="row">
                         <div class="col-4">
-                            <img class="img-fluid" src="images/vishal_logo.jpg" alt="" /><br>
+                            <img class="img-fluid" src="images/vishal_logo 2.svg" alt="" /><br>
                         </div>
                         <div class="col-8"></div>
                     </div>
-                    <p>
+                    <p class="text-left">
                         I had earlier bought website and app for my store paying 50k once and 2.25Lakh once from
                         different service providers. However, After delivering the website, I never ever used to get
                         proper support. But here the service support is excellent. They schedule monthly calls for
@@ -365,11 +365,11 @@
                 <div class="card p-3 text-left">
                     <div class="row">
                         <div class="col-4">
-                            <img class="img-fluid" src="images/sjr_logo.jpg" alt="" /><br>
+                            <img class="img-fluid" src="images/IMG_20230304_102605_447 1.svg" alt="" /><br>
                         </div>
                         <div class="col-8"></div>
                     </div>
-                    <p>
+                    <p class="text-left">
                         I joined my family business one year ago and was not happy with the old-school method of
                         maintaining records. When I considered implementing software for this purpose, I had two
                         concerns: pricing and the ease of use for other people at the store. I asked for demo account
@@ -394,7 +394,7 @@
                         </div>
                         <div class="col-8"></div>
                     </div>
-                    <p>
+                    <p class="text-left">
                         What I like the most is “learnings”. They have established a community and conduct a monthly
                         call they call as the "cadence call" (a new term I learned). Here what we do is discussions.
                         Purely valuable discussions take place here. You can bring up any problems you want to solve or
@@ -422,11 +422,11 @@
         <div class="max-width">
             <div class="faq-container-content">
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="card mt-5 p-3 bottom_class">
+                    <div class="col-md-12 ">
+                        <div class="faq-content mt-5 p-3 bottom_class">
                             <div class="row " style="padding: 2%">
                                 <div class="col-md-12 text-center">
-                                    <h2 class="faq-heading title">Have any questions?</h2>
+                                    <h2 class="faq-heading points">Have any questions?</h2>
                                 </div>
                                 <div class="col-md-12 mt-5">
                                     <div class="card p-3">
@@ -524,6 +524,7 @@
                             </div>
                         </div>
                     </div>
+                    
                 </div>
             </div>
 
