responsive commit btn links

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                                 Modern days need modern software to beat your competitor
                             </div>
                             <div class="d-none d-sm-block">
-                                <a href="#" id="getStarted">Get Started</a>
-                                <a href="#" id="bookDemo">Book Demo</a>
+                                <a href="https://calendly.com/business-jewellers-live/30min" id="getStarted">Get Started</a>
+                                <a href="https://www.jotform.com/form/232131157722043" id="bookDemo">Book Demo</a>
                             </div>
                             <div class="d-block d-sm-none">
-                                <a href="#" id="bookDemo">Book Demo</a>
+                                <a href="https://www.jotform.com/form/232131157722043" id="bookDemo">Book Demo</a>
                             </div>
 
                         </div>
@@ -330,7 +330,7 @@
                     <br>
                     <div class="row">
                         <div class="col-4">
-                            <img src="images/owner1.jpeg" alt="">
+                            <img src="images/owner1.jpeg" style="border-radius: 50%;" alt="">
                         </div>
                         <div class="col-8">
                             <span class="jeweller-name">Susil Kumar</span><br />
@@ -354,7 +354,7 @@
                     </p><br>
                     <div class="row">
                         <div class="col-4">
-                            <img src="images/owner2.jpeg" alt="">
+                            <img src="images/owner2.jpeg" style="border-radius: 50%;" alt="">
                         </div>
                         <div class="col-8">
                             <span class="jeweller-name">Bharath Acha</span><br />
@@ -379,7 +379,7 @@
                     </p><br>
                     <div class="row">
                         <div class="col-4">
-                            <img src="images/owner3.jpeg" alt="">
+                            <img src="images/owner3.jpeg" style="border-radius: 50%;" alt="">
                         </div>
                         <div class="col-8">
                             <span class="jeweller-name">Vinay</span><br />
@@ -403,7 +403,7 @@
                     </p><br>
                     <div class="row">
                         <div class="col-4">
-                            <img src="images/owner4.jpg" alt="">
+                            <img src="images/owner4.jpg" style="border-radius: 50%;" alt="">
                         </div>
                         <div class="col-8">
                             <span class="jeweller-name">Kiran</span><br />
