responsive commit changed links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li><a href="#" class="my-menu-btn" style="color: #e9b640;">Home</a></li>
                 <li><a href="https://www.canva.com/design/DAFiZOdadUM/GMhL9Iu7DP8mfbc5NlUL-g/view?utm_content=DAFiZOdadUM&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink "
                         class="my-menu-btn">Pricing</a></li>
-                <li><a href="https://jewellers.live/?cat=15" class="my-menu-btn">Blogs</a></li>
+                <li><a href="https://jewellers.live/blogs/?cat=15" class="my-menu-btn">Blogs</a></li>
                 <li><a href="#aboutUS" class="menu-btn">About Us</a></li>
                 <!-- <li><a href="#" class="my-menu-btn">Support</a></li> -->
                 <li><a href="https://chat.whatsapp.com/HyhD4q6DwcX8WysegvOiaT" class="my-menu-btn">Community</a></li>
@@ -566,14 +566,14 @@
                         <a href="#aboutUS">About Us</a><br><br>
 
 
-                        <a href="https://jewellers.live/?page_id=275">FAQ</a><br><br>
+                        <a href="https://jewellers.live/faq/?page_id=275">FAQ</a><br><br>
 
 
                         <a href="#">Terms of Use</a><br><br>
 
                     </div>
                     <div class="col-md-3" id="col2">
-                        <a href="https://jewellers.live/?page_id=216">Privacy Policy</a><br><br>
+                        <a href="https://jewellers.live/privacy-policy/?page_id=216">Privacy Policy</a><br><br>
                         <a href="#">Refund & Cancellation Policy</a><br>
 
 
@@ -641,14 +641,14 @@
                         <a href="#aboutUS">About Us</a><br><br>
 
 
-                        <a href="https://jewellers.live/?page_id=275">FAQ</a><br><br>
+                        <a href="https://jewellers.live/faq/?page_id=275">FAQ</a><br><br>
 
 
                         <a href="#">Terms of Use</a><br><br>
 
                     </div>
                     <div class="col-md-3" id="col2">
-                        <a href="https://jewellers.live/?page_id=216">Privacy Policy</a><br><br>
+                        <a href="https://jewellers.live/privacy-policy/?page_id=216">Privacy Policy</a><br><br>
                         <a href="#">Refund & Cancellation Policy</a><br>
 
 
